add: implemented hibernate (database connection)